fix index image

--- a/html5/normal/src/index.html
+++ b/html5/normal/src/index.html
@@ -255,10 +255,10 @@
                 var xthis = this;
                 setTimeout(function () {
                     xthis.swiperDataList = [{
-                        'src': 'http://img2.lemall.ru/wap/20170126/default/17288210563884265',
+                        'src': 'https://m.360buyimg.com/mobilecms/s720x322_jfs/t5803/321/7597521862/87323/dd8afe42/5971c104Nf96d41dc.jpg!q70.jpg',
                         'href': '#1'
                     }, {
-                        'src': 'http://img2.lemall.ru/wap/20170126/default/17288210563884265',
+                        'src': 'https://m.360buyimg.com/mobilecms/s720x322_jfs/t6118/327/6103453630/105587/b8df1270/59709c26N6ead6253.jpg!q70.jpg',
                         'href': '#2'
                     }];
                 }, 300);
